Update CEX basic info for display

--- a/cex/Bitget/data.yml
+++ b/cex/Bitget/data.yml
@@ -4,10 +4,16 @@ type: "Centralized Exchange"
 registration: "Seychelles"
 logo: assets/bitget.svg
 established: 2018
+email: "support@bitget.com"
 overview: "Bitget is a comprehensive crypto trading platform founded in 2018 by pioneers convinced of a future driven by blockchain technology. Designed to empower users with smart, secure, one-stop crypto investment solutions, Bitget has rapidly developed into a significant player in the cryptocurrency space. It boasts the title of being the largest crypto copy trading platform globally, with over 25 million registered users and a staggering daily trading volume of 10 billion USDT. The platform offers a range of services including spot trading, futures trading, and unique educational resources aimed at enhanced financial decisions, underpinned by a strong focus on user-centric values, integrity, and open communication."
 history: "Bitget’s roots trace back to a dedicated team with a background in traditional finance who explored blockchain technology in 2015. Officially founded amid the bear market of 2018 after its founders studied the Bitcoin whitepaper and Ethereum ecosystem, Bitget emerged from the conviction that cryptocurrency would significantly influence future financial systems and potentially aid unbanked populations. Despite the market's volatility, Bitget was part of the minority who persisted, focusing on long-term growth and product innovation. Today, the platform emphasizes achieving a more equitable world through crypto evolution, with a mission to enable secure, efficient, and smart digital transactions globally. The team is globally diverse with over 1500 employees from 60 countries, reinforcing its extensive reach and impact in the crypto sector."
 website_info:
   url: "https://www.bitget.com/"
+  facebook: "https://www.facebook.com/BitgetGlobalOfficial"
+  twitter: "https://twitter.com/bitgetglobal"
+  linkedin: "https://www.linkedin.com/company/bitget-global/"
+  discord: "https://discord.com/invite/bitget"
+  reddit: "https://www.reddit.com/r/BitgetReddit/"
 trading_information:
   volume_24h: $3,996,299,016
   btc_24h: 60,747 BTC
@@ -33,12 +39,9 @@ founders:
 launch_info:
   launch_date: "2018"
   growth: "Empowers over 20 million users across 100 countries with a focus on copy trading and various smart trading tools."
-restricted_countries:
-  - "United States"
-  - "Singapore"
-  - "North Korea"
-  - "Sudan"
+restricted_countries: "Bitget provides services to customers in over 100 countries, while it has restrictions on providing its products and services to certain countries and regions, including the US, Singapore, North Korea, Sudan, etc."
 fees:
+  url: "https://www.bitget.com/fee"
   fee_structure:
     maker_taker_fee: "Spot: 0.1% (Maker and Taker), reduced to 0.08% with BGB payment. Futures: Makers 0.02%, Takers 0.06%"
   deposit: "Yes"
@@ -51,6 +54,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 125X for futures, 10X for spot trading"
+  details: "Bitget caters to traders seeking leverage with options available for both spot and futures trading. With leverage ratios up to 125x in futures and 10x in spot trading, users can amplify positions and potentially maximize profits."
 derivatives_products:
   options_description: "Includes crypto-to-crypto trading, spot trading, futures trading, margin trading, copy trading."
 trust_score: 9/10
