--- a/cex/Crypto.com/data.yml
+++ b/cex/Crypto.com/data.yml
@@ -4,10 +4,17 @@ type: "Centralized Exchange"
 registration: "Singapore"
 logo: assets/crypto.com-logo.svg
 established: 2019
+email: "contact@crypto.com"
 overview: "Crypto.com is a leading cryptocurrency platform with a visionary mission to accelerate the global transition to cryptocurrency, aiming to incorporate Cryptocurrency in Every Wallet. The service emphasizes the transformative potential of cryptocurrencies and Web3 in creating a more equitable digital future, where users maintain control over their money, data, and identity. As the world’s platform reaches millions, including 80 million users across 90 countries, Crypto.com offers extensive features such as Crypto Earn, Crypto.com Pay, and a varied educational segment to guide user decisions in the crypto space."
 history: "Founded in 2018, Crypto.com has quickly emerged as a significant entity in the digital payments and cryptocurrency markets. The platform was conceived with the belief that the future internet, powered by blockchain and Web3 technologies, will ensure fair participation and ownership by all users involved—builders, creators, and consumers. Crypto.com operates under stringent regulatory guidance such as from the Monetary Authority of Singapore, showcasing commitment to compliance and user security. With a global team of over 1500 individuals from around the world, Crypto.com continuously strives to innovate and adapt in the fast-paced cryptocurrency environment. The founding team, including Kris Marszalek as CEO, encapsulates a diverse mix of expertise, driving the platform towards its ambitious vision of a crypto-empowered world."
 website_info:
   url: "https://crypto.com/exchange"
+  facebook: "https://www.coingecko.com/en/exchanges/CryptoComOfficial"
+  twitter: "https://twitter.com/cryptocom"
+  telegram: "https://t.me/CryptocomOfficial"
+  linkedin: "https://hk.linkedin.com/company/cryptocom"
+  discord: "https://discord.com/invite/nsp9JTC"
+  reddit: "https://www.reddit.com/r/Crypto_com"
 trading_information:
   volume_24h: $1,848,241,162
   btc_24h: 28,045 BTC
@@ -39,9 +46,9 @@ founders:
 launch_info:
   launch_date: "2019"
   growth: "Grown to over 50 million customers in more than 90 countries. Renamed from Monaco to Crypto.com in 2018."
-restricted_countries:
-  - "New York (USA)"
+restricted_countries: "The Crypto.com App is currently available in 49 states in the United States, except New York. Globally, the exchange has quite extensive restrictions, and the full list is on the official website."
 fees:
+  url: "https://crypto.com/exchange/document/fees-limits"
   fee_structure:
     maker_taker_fee: "Spot and margin trading: 0.075% - 0.00%, Derivatives: 0.017% - 0.00%"
   deposit: "No"
@@ -52,6 +59,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 10X"
+  details: "Investors can access up to 10X leverage via margin trading on the Crypto.com platform. Margin traders can choose between 3X, 5X and 10X leverage. Users who stake CRO receive preferential interest rates of as low as 0.008% per day. Users can also trade crypto derivatives — perpetuals and futures contracts with up to 100X leverage."
 derivatives_products:
   options_description: "Offers derivatives trading including perpetuals and futures contracts with up to 100X leverage."
 trust_score: 10/10
