--- a/cex/Gate.io/data.yml
+++ b/cex/Gate.io/data.yml
@@ -4,10 +4,14 @@ type: "Centralized Exchange"
 registration: "Cayman Islands"
 logo: assets/Gate-io.svg
 established: 2013
+email: "support@mail.gate.io"
 overview: "Gate.io, established in 2013, is a holistic cryptocurrency exchange platform offering a vast selection of services to cater to its global user base. Recognized as one of the top 10 global cryptocurrency exchanges, Gate.io provides a robust trading environment with access to over 1,700 cryptocurrencies and a wide array of trading options including futures, derivatives, and spot trading. The platform excels in innovation, integrity, and user-focused services, highlighting features such as 100% proof of reserves, comprehensive asset security systems, and a user-first approach. Gate.io's ecosystem also extends into Web3, with offerings such as NFTs, decentralized applications, and Gate Web3—a secure platform for Wallet tools, swaps, and cross-chain transfers."
 history: "Gate.io has shown significant growth and adaptation within the evolving crypto market landscape since its inception. The journey began with the ambition to establish a secure and efficient trading platform for cryptocurrency enthusiasts worldwide. Over the years, it expanded its offerings to include Gate Ventures for venture capital investments, Gate NFT for trading NFTs, and Gate Labs focusing on blockchain project incubation. The platform has also invested in community and educational initiatives like Gate Charity and Gate Learn, further solidifying its commitment to advancing blockchain technology and philanthropy. Notably, the platform has navigated through regulatory environments to set up branches and secure necessary licenses across various global markets, illustrating its dedication to compliance and user security."
 website_info:
   url: "https://gate.io/"
+  facebook: "https://www.facebook.com/gateioglobal"
+  twitter: "https://twitter.com/gate_io"
+  telegram: "https://t.me/gateio"
 trading_information:
   volume_24h: $4,922,697,598.36
   btc_24h: 75,243 BTC
@@ -30,17 +34,9 @@ founders:
 launch_info:
   launch_date: "2013"
   growth: "Gate.io is the earliest crypto-to-crypto exchange from China, offering services globally with a large number of crypto coins and tokens to trade."
-restricted_countries:
-  - "Cuba"
-  - "Sudan"
-  - "Syria"
-  - "Iran"
-  - "North Korea"
-  - "Venezuela"
-  - "Pakistan"
-  - "Crimea"
-  - "Certain services not available in parts of the US (Washington, New York) and Canada."
+restricted_countries: "The platform is available to all countries except Cuba, Sudan, Syria, Iran, North Korea, Venezuela, Pakistan, and Crimea. Some services are not available to residents of the US (in Washington, New York) and Canada."
 fees:
+  url: "https://www.gate.io/fee"
   fee_structure:
     maker_taker_fee: "0.20%"
   deposit: None
@@ -53,6 +49,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 10X"
+  details: "Gate.io offers to its clients margin trading with 10X leverage. The volume of the margin loan is determined by the leverage ratio: the exchange provides leverage ratios from 3X to 10X, which varies from market to market."
 derivatives_products:
   options_description: "Supports spot and margin trading, as well as futures and derivatives for investors."
 trust_score: 9/10
