--- a/cex/HTX/data.yml
+++ b/cex/HTX/data.yml
@@ -4,10 +4,15 @@ type: "Centralized Exchange"
 registration: "Seychelles"
 logo: assets/HTX-Logo.jpeg
 established: 2013
+email: "support@huobigroup.com"
 overview: "HTX is a prominent Bitcoin exchange that provides a comprehensive suite of services including spot trading, futures trading, derivatives, and earning options, catering to a wide array of user needs in the cryptocurrency market. With over 700 virtual assets available for trading, HTX offers industry-leading annual percentage yields (APYs) and a variety of tools designed to enhance the trading experience. The platform boasts a significant user base with 45+ million users globally and records an impressive 24h trading volume of over $3 billion. HTX not only facilitates trading but also focuses on community engagement and educational advancements through offers like rewards for new sign-ups and educational resources through HTX Futures Community."
 history: "Since its inception in 2013, HTX has established itself as a top choice for cryptocurrency traders worldwide. The platform has continuously evolved to include a wide range of financial products that cater to the needs of its diverse user base—from casual traders to institutional clients. HTX has emphasized security, compliance, and user experience, adopting global standards and obtaining necessary licenses to operate across different jurisdictions. Over the years, it has expanded its service offerings to include innovative trading options, like copy trading and trading bots, alongside traditional trading methods. This evolution reflects HTX's commitment to staying at the forefront of the cryptocurrency exchange market while fostering an inclusive and educational trading environment."
 website_info:
   url: "https://www.htx.com/en-us/"
+  facebook: "https://www.facebook.com/huobiglobalofficial"
+  twitter: "https://twitter.com/HuobiGlobal"
+  telegram: "https://t.me/HTX_Chineseofficial"
+  discord: "https://discord.gg/htx-official"
 trading_information:
   volume_24h: $3,089,725,194
   btc_24h: 47,698 BTC
@@ -30,20 +35,9 @@ founders:
 launch_info:
   launch_date: "2013"
   growth: "Founded in China, HTX has expanded its services globally, offering a wide range of trading and investment options to users in over 100 countries."
-restricted_countries:
-  - "China"
-  - "United States"
-  - "Canada"
-  - "Japan"
-  - "Cuba"
-  - "Iran"
-  - "North Korea"
-  - "Sudan"
-  - "Syria"
-  - "Venezuela"
-  - "Singapore"
-  - "Crimea"
+restricted_countries: "Users from the following countries are not allowed to access all services provided by HTX: China, United States, Canada, Japan, Cuba, Iran, North Korea, Sudan, Syria, Venezuela, Singapore and Crimea. Derivatives trading is prohibited for users from these countries: Mainland China, Taiwan, Hong Kong, Israel, Iraq, Bangladesh, Bolivia, Ecuador, Kyrgyzstan, Sevastopol, Spain, United Kingdom (retail users only) and New Zealand. Users in Japan can access Huobi Japan, while the company has announced plans to re-enter the U.S. market."
 fees:
+  url: "https://www.htx.com/en-us/fee/"
   fee_structure:
     maker_taker_fee: "Base fee: 0.2%, reduces after the first $5 million. HT holders get a discount."
   deposit: None
@@ -55,6 +49,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 200X for derivatives, 3X for cross margin"
+  details: "Margin trading is available on the platform for various cryptocurrencies, which allows users to borrow funds to trade with leverage up to 3X for cross margin. Interest rates are calculated on an hourly basis. Users can also trade crypto futures for Bitcoin and Ethereum contracts, with leverage of up to 200X."
 derivatives_products:
   options_description: "Supports ICO tokens and offers a broad assortment of cryptocurrencies, including spot trading, margin trading, futures trading, derivatives trading, staking, crypto loans, and more."
 trust_score: 9/10
