--- a/cex/KuCoin/data.yml
+++ b/cex/KuCoin/data.yml
@@ -4,10 +4,17 @@ type: "Centralized Exchange"
 registration: "Seychelles"
 logo: assets/kucoin-logo.svg
 established: 2017
+email: "https://www.kucoin.com/support"
 overview: "KuCoin, a global cryptocurrency exchange, positions itself as a facilitator for the unrestricted global flow of digital value, highlighting its commitment to broadening access to cryptocurrency. With over 27 million users worldwide and featuring more than 750 listed tokens, KuCoin leverages advanced technology to offer a multitude of services including spot and futures trading, as well as an innovative crypto lending platform. The exchange is particularly focused on inclusivity and community engagement, fostering a platform where users can participate in the growth of cryptocurrencies and have their voices heard within the community. KuCoin also underpins its services with the KuCoin Token (KCS), which plays a central role in accessing a burgeoning decentralized ecosystem created by and for its community."
 history: "KuCoin’s inception began with two tech-driven founders, Michael and Eric, who started coding and showed an early interest in blockchain technology. Their journey into cryptocurrency started in 2012 when Michael began mining Bitcoin after learning about it from Eric. The experience of using complex platforms like Mt. Gox inspired them to create a more user-friendly exchange. In 2013, they initiated KuCoin's development in a cafe, aiming to make the financial system more inclusive not just for the wealthy but for all global citizens, including the less educated and unbanked populations. This led to the establishment of KuCoin, branded as the \"People's Exchange\", which rapidly evolved into a significant global player in the crypto market with aspirations of impacting the industry on a large scale."
 website_info:
   url: "https://www.kucoin.com/"
+  facebook: "https://www.facebook.com/kucoinexchangepage"
+  twitter: "https://twitter.com/kucoincom"
+  telegram: "https://t.me/Kucoin_Exchange"
+  linkedin: "https://www.linkedin.com/company/kucoin/"
+  discord: "https://discord.gg/kucoinofficialserver"
+  reddit: "https://www.reddit.com/r/kucoin"
 trading_information:
   volume_24h: $1,520,608,806.41
   btc_24h: 22,528 BTC
@@ -36,9 +43,9 @@ founders:
 launch_info:
   launch_date: "September 2017"
   growth: "Grew to service over 30 million users worldwide in more than 200 countries and regions. Recognized by Forbes and Finders for its excellence in the crypto exchange space."
-restricted_countries:
-  - "Information on specific restricted countries is not provided; users should check the official website."
+restricted_countries: "The platform provides services to countries such as Turkey, India, Japan, and many others. Please check their official website for supported countries."
 fees:
+  url: "https://www.kucoin.com/vip/privilege"
   fee_structure:
     maker_taker_fee: "Trading fees average at 0.1%"
   deposit: Free
@@ -50,6 +57,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Information on leverage not provided in the given text."
+  details: "Users from restricted countries/regions, or users from IP addresses in restricted countries/regions, or blacklisted users may not enable margin trading."
 derivatives_products:
   options_description: "Supports futures trading, margin trading."
 trust_score: 9/10
