--- a/cex/LBank/data.yml
+++ b/cex/LBank/data.yml
@@ -4,10 +4,16 @@ type: "Centralized Exchange"
 registration: "British Virgin Islands"
 logo: assets/lbank-logo.svg
 established: 2015
+email: "service@lbank.info"
 overview: "LBank Exchange has set up offices in different countries to deliver better services in more places, and the Operation Office is in Indonesia. LBank Exchange currently supports 50+ fiat currencies, including USD, EUR, GBP, JPY,  CAD, AUD, RUB, INR, AED, etc.; Purchase of major digital assets, including BTC, ETH, USDT, etc.; and 20+ payment methods, including Master Card, Visa, Google Play, ApplePay, Bank Transfer, etc."
 history: "Founded in 2015, LBank Exchange (PT LBK TEKNOLOGY INDONESIA) is a top cryptocurrency trading platform with licenses of NFA, MSB, and Canada MSB. LBank Exchange provides global users with secure, professional, and convenient products and services, including Cryptocurrency Trading, Derivatives, Staking, NFT, and LBK Labs investment"
 website_info:
   url: "https://www.lbank.com/"
+  facebook: "https://www.facebook.com/LBank.info/"
+  twitter: "https://twitter.com/LBank_Exchange"
+  telegram: "https://t.me/LBank_en"
+  linkedin: "https://www.linkedin.com/company/lbank"
+  reddit: "https://www.reddit.com/r/LBank2021/"
 trading_information:
   volume_24h: $2,463,000,097
   total_assets: "Reserve data unavailable"
@@ -25,8 +31,9 @@ founders: []
 launch_info:
   launch_date: "2015"
   growth: "Established globally, providing services in buying and selling major crypto assets like Bitcoin (BTC) and Ethereum (ETH) in over 149 fiat currencies. Licensed by reputable financial agencies, serving over 9 million users across more than 200 regions."
-restricted_countries: []
+restricted_countries: "The exchange has more than 9 million users and accepts clients from over 200 regions."
 fees:
+  url: "https://www.lbank.com/fee/trading"
   fee_structure:
     maker_taker_fee: "Spot: 0.10%, Futures: Maker: 0.02%, Taker: 0.06%"
   deposit: Free
@@ -59,6 +66,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 125X for derivatives"
+  details: "Exchange customers can trade leveraged ETFs using the spot trading process. A leveraged ETF is a derivative instrument. No margin is required. LBank supports 3X long leverage (3L) and 3X short leverage (3S). Users can also trade crypto futures, including BTCUSDT, ETHUSDT, FILUSDT and more perpetual contracts with leverage of up to 125X. Cross margin and isolated margin are available."
 derivatives_products:
   options_description: "Includes spot and margin trading, crypto futures, ETFs trading, and options alongside professional asset management services."
 trust_score: 8/10
