--- a/cex/binance/data.yml
+++ b/cex/binance/data.yml
@@ -4,10 +4,17 @@ type: "Centralized Exchange"
 registration: "Cayman Islands"
 logo: assets/binance-logo.svg
 established: 2017
+email: "support@binance.zendesk.com"
 overview: "Binance is a leading blockchain ecosystem and the world's largest digital asset exchange by trade volume, offering a wide array of services to a global user base. According to its platform statistics, Binance manages an average daily volume reaching $65 billion, with $300 billion in spot transactions recorded in 2022 alone. It provides around-the-clock customer support in 40 different languages. Binance not only focuses on trade but also incorporates Binance Research, Academy, Charity, NFT, and more, aiming to provide an in-depth and comprehensive suite of products and services in the blockchain space. Their mission, to be the infrastructure provider for the crypto world of tomorrow, underpins their array of offerings which cater to both new and experienced participants in the cryptocurrency industry."
 history: "The history and leadership of Binance are marked by noteworthy figures, notably CZ (Changpeng Zhao) and Yi He, who have driven Binance’s rapid growth since its establishment in July 2017. Under their stewardship, Binance expanded from a simple trading platform to a broad blockchain ecosystem within just six months of its launch. CZ, with a background ranging from food service to high-level technology positions, and Yi He, known for her leadership in business strategies and marketing, both have transformed Binance into a pivotal player in the blockchain field. The board consists of experienced professionals from various sectors, including Gabriel Abed, a recognized technology entrepreneur and diplomat, enhancing Binance's governance and strategic direction. By continuously engaging with regulators and prioritizing user protection, Binance strives not only for industry leadership but also for compliance and sustainability in the evolving crypto regulatory landscape."
 website_info:
   url: "https://www.binance.com/"
+  facebook: "https://www.facebook.com/binanceexchange"
+  twitter: "https://twitter.com/binance"
+  discord: "https://discord.gg/jE4wt8g2H2"
+  reddit: "https://www.reddit.com/r/binance/"
+  medium: "https://medium.com/binanceexchange"
+  steemit: "https://steemit.com/@binanceexchange"
 trading_information:
   volume_24h: $26,763,528,178.86
   btc_24h: 381,378 BTC
@@ -33,19 +40,10 @@ founders:
 launch_info:
   launch_date: "June 2017"
   growth: "Became the largest cryptocurrency exchange in the world within 180 days."
-restricted_countries:
-  - "United States"
-  - "Singapore"
-  - "Ontario (Canada)"
-  - "China"
-  - "Malaysia"
-  - "Japan"
-  - "UK"
-  - "Thailand"
-  - "Germany"
-  - "Italy"
-  - "The Netherlands"
+restricted_countries: "Under the Binance Terms of Use, restricted locations include the United States, Singapore and Ontario (Canada). However, some countries have restricted usage or features might be limited due to regulatory reasons, including but not limited to, China, Malaysia, Japan, UK and Thailand. Futures and derivatives products are also not available in Germany, Italy and The Netherlands. In September 2019, a separate dedicated platform for US clients, Binance.US, was launched."
+
 fees:
+  url: "https://www.binance.com/en/fee/schedule"
   fee_structure:
     maker_taker_fee: 0.10%
     zero_fee_pairs:
@@ -94,6 +92,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 10X on Binance Margin"
+  details: "Traders can borrow funds and participate in margin trading on Binance Margin, which allows trading cryptocurrencies with up to 10X leverage. Users can also use derivatives products such as Binance Futures, settled in USDT, BUSD or other cryptocurrencies and Binance Options to leverage on their trades."
 derivatives_products:
   options_description: "Traders can use Binance Futures, settled in USDT, BUSD or other cryptocurrencies and Binance Options to leverage on their trades."
 trust_score: 9/10
