--- a/cex/bybit/data.yml
+++ b/cex/bybit/data.yml
@@ -4,10 +4,16 @@ type: "Centralized Exchange"
 registration: "British Virgin Islands"
 logo: assets/bybit-3.svg
 established: 2018
+email: "support@bybit.com"
 overview: "Bybit, branded as #TheCryptoArk and a gateway to Web3, has established itself as a leading force in the cryptocurrency exchange landscape. With over 20 million users globally and managing a daily average trading volume exceeding $10 billion, Bybit operates round the clock supporting customers across more than 160 countries. The platform is dedicated to unleashing the full potential of crypto and Web3 through innovative tools, robust support, and varied opportunities for its users. In its commitment to providing exemplary service, Bybit recently secured roots in Dubai with a new headquarters and an MVP license, further elevating its trusted status in the financial technology sphere."
 history: "Bybit has shown remarkable growth and innovation since its inception in 2018, starting with launching the BTCUSD Inverse Perpetual Contract by a team of ten pioneers. By 2019, it celebrated reaching break-even, buoyed by 5,000 early adopters and handling 10% of the global Bitcoin trading volume. In subsequent years, Bybit continued to exceed milestones, including surpassing $70 billion in daily trading volume in 2021 and initiating #TheCryptoArk for blockchain enthusiasts. Bybit's commitment to transparency and user support is evident in their 2022 achievements, such as launching USDC-settled Options contracts and partnering with Oracle Red Bull Racing. The platform's regulatory compliance is overseen by multiple authorities, including the Virtual Assets Regulatory Authority in Dubai, ensuring a secure and reliable trading environment."
 website_info:
   url: "https://www.bybit.com/"
+  facebook: "https://www.facebook.com/Bybit"
+  twitter: "https://twitter.com/Bybit_Official"
+  telegram: "https://t.me/BybitEnglish"
+  linkedin: "https://www.linkedin.com/company/bybitexchange/"
+  discord: "https://discord.com/invite/CeGhhS95fQ"
 trading_information:
   volume_24h: $6,636,204,826
   btc_24h: 101,299 BTC
@@ -30,18 +36,9 @@ founders:
 launch_info:
   launch_date: "March 2018"
   growth: "Serves over 10 million users and institutions, offering access to over 100 assets and contracts across Spot, Futures and Options, launchpad projects, earn products, an NFT Marketplace and more."
-restricted_countries:
-  - "United States"
-  - "Singapore"
-  - "Cuba"
-  - "Crimea"
-  - "Sevastopol"
-  - "Iran"
-  - "Syria"
-  - "North Korea"
-  - "Sudan"
-  - "Mainland China"
+restricted_countries: "The global platform is available to customers worldwide, except for countries with service restrictions such as the U.S, Singapore, Cuba, Crimea, Sevastopol, Iran, Syria, North Korea, Sudan, Mainland China."
 fees:
+  url: "https://www.bybit.com/en/help-center/article/Trading-Fee-Structure"
   fee_structure:
     maker_taker_fee: "Spot: 0.10%, Derivatives: Maker: 0.01% - 0%, Taker: 0.06% - 0.03%"
   deposit: "Yes"
@@ -54,6 +51,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 100X for derivatives"
+  details: "The exchange also offers trading with up to 100X leverage on crypto derivatives products. Available products include BTC/USD, ETH/USD, XRP/USD, EOS/USD, and more perpetual contracts. Users can use isolated margin and cross margin as well. Customers have access to Inverse perpetuals, crypto futures, crypto options and leveraged tokens."
 derivatives_products:
   options_description: "Includes USDT perpetuals, USDC perps, inverse perps, futures, USDC options, leveraged tokens."
 trust_score: 10/10
