--- a/cex/coinbase/data.yml
+++ b/cex/coinbase/data.yml
@@ -4,10 +4,13 @@ type: "Centralized Exchange"
 registration: "United States"
 logo: assets/coinbase.svg
 established: 2012
+email: "support@coinbase.com"
 overview: "Coinbase, launched with a driving mission to enhance economic freedom globally, is a forefront platform in the cryptocurrency sector, entwining traditional finance with the burgeoning cryptoeconomy. Their platform is tailored to enable over 1 billion people to easily and securely engage with digital assets through trading, staking, safekeeping, and more, while also facilitating swift, cost-free global transfers. With a reach that extends to 245,000 ecosystem partners across over 100 countries, Coinbase is not just a market player but a significant hub for crypto transactions, safeguarding assets worth approximately $193 billion and maintaining a quarterly trading volume of about $154 billion. Their operational philosophy is grounded in user-first approaches, innovation, and stringent compliance with prevailing regulatory landscapes to foster trust and reliability."
 history: "Founded to upgrade a century-old financial system, Coinbase fosters a cryptoeconomy underpinned by a robust compliance framework that mirrors best practices from traditional financial services. The platform is proactive in monitoring listed tokens for compliance, adapting to regulatory changes, and ensuring user safety through advanced KYC verifications and scaled compliance solutions. Their commitment extends beyond transactional relationships, as they actively contribute to the development of onchain infrastructure and support for crypto builders. Positioned at the intersection of technology and finance, Coinbase’s executive team and a diverse board—including co-founders and leaders from varied sectors—steer its strategic direction, emphasizing integrity and the responsible scaling of digital asset adoption globally."
 website_info:
   url: "https://exchange.coinbase.com"
+  facebook: "https://www.facebook.com/Coinbase"
+  twitter: "https://twitter.com/coinbase"
 trading_information:
   volume_24h: $4,880,676,872.76
   btc_24h: 74,805 BTC
@@ -33,9 +36,9 @@ founders:
 launch_info:
   launch_date: "June 2012"
   growth: "Established as a key platform in crypto trading and investment space, with user-friendly interface for both beginners and advanced traders."
-restricted_countries:
-  - Full list not specified, but functions may be limited in certain countries.
+restricted_countries: "Coinbase is available in over 100 countries, although some functions may be restricted in certain areas. The entire list can be viewed on the official website."
 fees:
+  url: "https://help.coinbase.com/en/pro/trading-and-funding/trading-rules-and-fees/fees"
   fee_structure:
     maker_taker_fee: "0.00% to 0.40% for maker, 0.05% to 0.60% for taker"
     zero_fee_pairs: N/A
@@ -58,6 +61,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "No"
   leverage: N/A
+  details: "In February 2020, it was announced that Coinbase Pro customers can access up to 3X leverage on USD-quoted books. But in November 2020, margin trading was disabled due to changes in the regulatory environment."
 derivatives_products:
   options_description: N/A
 trust_score: 10/10
