--- a/cex/Kraken/data.yml
+++ b/cex/Kraken/data.yml
@@ -4,10 +4,16 @@ type: "Centralized Exchange"
 registration: "United States"
 logo: assets/kraken-2.svg
 established: 2011
+email: "https://support.kraken.com/hc/en-us/requests/new"
 overview: "Kraken is a renowned cryptocurrency exchange that offers a comprehensive range of services to cater to both new and experienced traders. Starting with a minimum investment of just $10, users can engage in advanced trading, including spot and margin trading with up to 5x leverage, futures trading with over 100 multi-collateral contracts, and even trade NFTs with zero gas fees. Kraken emphasizes ease of use, robust security measures, customer service availability 24-7, and deep liquidity to maximize user profits. Their platform is mission-driven, focusing on security, trust, and user empowerment. Additionally, Kraken offers educational resources to help users understand crypto markets and tools for managing crypto investments such as Kraken Pro for advanced trading and Kraken Wallet for managing onchain activities."
 history: "Kraken was founded to create a crypto trading platform that is accessible to everyone, reflected in its presence across 190+ countries and a quarterly trading volume of over $207 billion. The platform prides itself on its user-centric approach, offering a simplified process for crypto purchasing which involves setting up an account, connecting a funding method, and starting trading over 200 cryptocurrencies. Kraken has also developed a reputation for their customer-centric service and educational efforts, aiming to demystify crypto trading for newcomers while providing detailed analytic tools and resources for seasoned traders. Through staking, users can earn rewards up to 10%+ APR, with Kraken managing over $800 million in rewards for its clients, emphasizing their commitment to providing value back to its user base."
 website_info:
   url: "https://www.kraken.com/"
+  facebook: "https://www.facebook.com/KrakenFX/"
+  twitter: "https://twitter.com/krakenfx"
+  telegram: "https://t.me/kraken_exchange_official"
+  linkedin: "https://www.linkedin.com/company/krakenfx/"
+  reddit: "https://www.reddit.com/r/Kraken/"
 trading_information:
   volume_24h: $1,652,896,190.92
   btc_24h: 25,295 BTC
@@ -30,30 +36,9 @@ founders:
 launch_info:
   launch_date: "September 2013"
   growth: "One of the first few crypto exchanges offering spot trading, derivatives and index products. Serves over 8 million traders and institutional clients globally."
-restricted_countries:
-  - "New York (USA)"
-  - "Washington (USA)"
-  - "Afghanistan"
-  - "Central African Republic"
-  - "Congo-Brazzaville"
-  - "Eritrea"
-  - "Congo-Kinshasa"
-  - "Guinea-Bissau"
-  - "Cuba"
-  - "Lebanon"
-  - "Iran"
-  - "Mali"
-  - "Iraq"
-  - "Namibia"
-  - "Libya"
-  - "Somalia"
-  - "North Korea"
-  - "South Sudan"
-  - "Syria"
-  - "Sudan"
-  - "Tajikistan"
-  - "Yemen"
+restricted_countries: "Kraken is available to all U.S. residents, except those living in New York and Washington. However, Kraken Futures are not available to all U.S. residents. Currently, the platform serves millions of customers in approximately 200 countries. The company has several restrictions for the following countries: Afghanistan, Central African Republic, Congo-Brazzaville, Eritrea, Congo-Kinshasa, Guinea-Bissau, Cuba, Lebanon, Iran, Mali, Iraq, Namibia, Libya, Somalia, North Korea, South Sudan, Syria, Sudan, Tajikistan and Yemen."
 fees:
+  url: "https://www.kraken.com/features/fee-schedule"
   fee_structure:
     maker_taker_fee: "0.00% - 0.26%"
   deposit: "Varies by currency and region"
@@ -63,6 +48,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 5X depending on the currency pair"
+  details: "For advanced users, Kraken Pro offers margin and futures features. The platform offers up to 5X leverage. The maximum level of leverage depends on the currency pair."
 derivatives_products:
   options_description: "Offers spot trading, margin trading, futures, indices, stakings, OTC and an upcoming NFT marketplace."
 trust_score: 10/10
