--- a/cex/OKX/data.yml
+++ b/cex/OKX/data.yml
@@ -4,10 +4,17 @@ type: "Centralized Exchange"
 registration: "Seychelles"
 logo: assets/okx-1.svg
 established: 2017
+email: "support@okx.com"
 overview: "OKX is a prominent cryptocurrency exchange that offers a broad spectrum of advanced financial services by leveraging blockchain technology. The platform provides users with a wide array of tokens and trading pairs, ensuring robust trading opportunities in spot, margin, expiry, options, perpetual futures trading, along with DeFi, lending, and mining services. With its aim to accommodate a global audience, OKX caters to millions of users across more than 100 countries. The exchange is dedicated to reshaping money, the financial system, and society by promoting the utility and adoption of cryptocurrency, thus contributing to individual freedom and dignity."
 history: "Since its founding, OKX has positioned itself as an innovative force in the crypto trading sphere. It strives to empower users with reliable technology for smart trading and investment decisions, emphasized by their commitment to providing seamless and ultra-low latency API connectivity and other infrastructure products. The exchange has a clear vision to make a tangible impact on money, the financial system, and the internet through the widespread adoption of crypto, asserting itself as a significant player among the leading crypto exchanges globally by volume. Over the years, OKX has shown a remarkable commitment to advancing the global understanding and adoption of cryptocurrencies, further solidifying its position at the forefront of the digital currency revolution."
 website_info:
   url: "https://www.okx.com/"
+  facebook: "https://www.facebook.com/OKXofficial/"
+  twitter: "https://twitter.com/OKX"
+  telegram: "https://t.me/OKXOfficial_English"
+  linkedin: "https://www.linkedin.com/company/okxofficial/"
+  discord: "https://discord.gg/e6EyvM5QwM"
+  reddit: "https://www.reddit.com/r/OKX/"
 trading_information:
   volume_24h: $5,691,712,529
   btc_24h: 12,017 BTC
@@ -33,9 +40,9 @@ founders:
 launch_info:
   launch_date: "2017"
   growth: "Established as a prominent cryptocurrency exchange, offering a wide range of trading products and services globally."
-restricted_countries:
-  - "United States"
+restricted_countries: "The project is supported in over 200 countries. However, residents of the United States don’t have access to the platform's services."
 fees:
+  url: "https://www.okx.com/fees"
   fee_structure:
     maker_taker_fee: "Spot: 0.02% - 0.2%, Futures: -0.01% - 0.05%"
   deposit: "Yes"
@@ -48,6 +55,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 125X for derivatives"
+  details: "OKX offers margin trading with leverage up to 10X. For derivatives, OKX also offers futures trading and perpetual swaps with up to 125X leverage. Traders can also leverage through crypto options, including BTC, ETH and more."
 derivatives_products:
   options_description: "Includes margin, futures, perpetual swaps and options trading."
 trust_score: 9/10
