--- a/cex/bitfinex/data.yml
+++ b/cex/bitfinex/data.yml
@@ -4,10 +4,16 @@ type: "Centralized Exchange"
 registration: "British Virgin Islands"
 logo: "assets/bitfinex-leaf.svg"
 established: 2012
+email: "info@bitfinex.com"
 overview: "Bitfinex, established in 2012, is one of the pioneering cryptocurrency exchanges aimed at providing an optimal trading environment for various types of clients including retail, professional, and institutional ones. It emphasizes high security, low latency, and high throughput to ensure a dependable trading space across a repertoire of almost 200 tokens, 400 spot trading pairs, and over 60 perpetual futures contracts. Bitfinex continually assesses the tokens it lists to maintain high standards of governance and liquidity. With a vision of leading global advocacy for freedom, Bitfinex aligns its mission with the Bitcoin ethos of decentralization, focusing on developing innovative technology that facilitates free and private transactions and interactions worldwide."
 history: "Bitfinex has been actively involved in promoting the understanding and benefits of Bitcoin and blockchain technology from its inception, considering these as core components to fostering a more open and equitable world. In 2022, it launched the Bitfinex Freedom Manifesto in El Salvador, the first country to recognize Bitcoin as legal tender, to underline its commitment to these principles. The exchange’s leadership, including CEO JL van der Velde and CTO Paolo Ardoino, brings together extensive experience in technology and finance, steering Bitfinex towards achieving technological excellence and education in the crypto space. Bitfinex’s corporate culture and educational efforts are geared toward advancing the global understanding of Bitcoin, aiming to drive wider adoption through its advocacy for transparency, security, and user empowerment."
 website_info:
   url: "https://www.bitfinex.com"
+  facebook: "https://www.facebook.com/bitfinex"
+  twitter: "https://twitter.com/bitfinex"
+  telegram: "https://t.me/bitfinex"
+  linkedin: "https://www.linkedin.com/company/bitfinex/"
+  discord: "https://discord.gg/bitfinex"
 trading_information:
   volume_24h: $357,939,510.77
   exchange_reserves: $17,924,613,298.42
@@ -26,21 +32,9 @@ founders:
     role: "Co-founder"
   - name: "Giancarlo Devasini"
     role: "Co-founder and CFO"
-restricted_countries:
-  - "Iran"
-  - "North Korea"
-  - "Cuba"
-  - "Syria"
-  - "Crimea"
-  - "Donetsk People's Republic"
-  - "Luhansk People's Republic"
-  - "United States"
-  - "Canada"
-  - "British Virgin Islands"
-  - "Venezuela"
-  - "Austria"
-  - "Italy"
+restricted_countries: "Bitfinex restricts access to Iran, North Korea, Cuba, Syria, Crimea, Donetsk People's Republic and the self-proclaimed Luhansk People's Republic. U.S. citizens, citizens or residents of Canada, the British Virgin Islands, the Government of Venezuela and residents of Austria or Italy are also prohibited from accessing the exchange."
 fees:
+  url: "https://www.bitfinex.com/fees"
   deposit:
     free_over_1000_usd: true
     small_deposit_fee:
@@ -57,6 +51,7 @@ accepted_payment_methods:
 margin_trading:
   availability: "Yes"
   leverage: "Up to 10X"
+  details: "On the platform, qualified users (basic plus verification level and above) have the option to trade up to 10X leverage, receiving funds through its peer-to-peer (P2P) margin funding platform."
 derivatives_products:
   description: "Offers margin lending, margin funding, paired trading, OTC trading and more."
 trust_score: 9/10
