--- a/cex/deribit/data.yml
+++ b/cex/deribit/data.yml
@@ -4,10 +4,15 @@ type: "Derivative Cryptocurrency Exchange"
 registration: "Netherlands"
 logo: "assets/deribit.svg"
 established: 2014
+email: "support@deribit.com"
 overview: "Deribit is a sophisticated cryptocurrency derivatives trading platform designed to cater to a varied audience of traders, providing an efficient and competitive market environment through its high-performance matching engine, low latency, and impeccable risk management features. Established with the distinctive aim of introducing the first cryptocurrency options exchange, Deribit has significantly grown since its inception in 2016, expanding beyond Bitcoin to include Ethereum and other cryptocurrency contracts. Housed in Panama City, Panama, the platform now supports a broad range of trading products including perpetual, futures, and options contracts. Through its commitment to liquidity and equity, Deribit has carved a niche as an influential entity in the crypto derivatives market, distinguished by its European style cash-settled options."
 history: "The founding history of Deribit reveals a platform pioneered by ambitious goals and achieved through relentless commitment and technical innovation. Over two years were dedicated to meticulous system development before the platform went live, underscoring its foundation on solid technological innovation designed specifically for optimal trading efficacy. Deribit’s continuous growth and positioning as a leader involve persistent advancements in technology, quality of service, and adherence to core values that prioritize integrity and customer satisfaction. By maintaining a strategic focus on staying at the cutting edge of technology and customer service, Deribit aims not only to keep up with the fast-evolving cryptocurrency market but to lead it, embodying a vision where a future dominated by cryptocurrency trading is both anticipated and prepared for."
 website_info:
   url: "https://www.deribit.com/"
+  twitter: "https://twitter.com/deribitexchange"
+  telegram: "https://t.me/deribit"
+  linkedin: "https://www.linkedin.com/company/deribit"
+  reddit: "https://www.reddit.com/r/DeribitExchange/"
 trading_information:
   volume_24h: $2,002,271,693.63
   open_interest_24h: $2,962,182,776.25
@@ -26,7 +31,9 @@ community_data:
   twitter_followers: 58,715
   monthly_pageviews: 645,605.0
   alexa_rank: 55959
+restricted_countries: "The access and use of our platform, and the services we offer are not allowed if you are located, incorporated or otherwise established in, a citizen or a resident of any of the countries in: Canada, Central African Republic, Congo, Cuba, Guam, Iran, Iraq, Japan, Democratic People's Republic of Korea, Libya, Mali, Myanmar, Panama, Puerto Rico, Samoa, Somalia, Sudan, South Sudan, Syrian Arab Republic, United States, Virgin Islands (U.S.), Yemen"
 fees:
+  url: "https://www.deribit.com/kb/fees"
   futures_liquidity_provider_rebate: 0.02%
   futures_liquidity_taker_fee: 0.05%
   perpetual_maker_rebate: 0.025%
@@ -35,7 +42,8 @@ fees:
   options_taker_fee: "0.04% of underlying or 0.0004BTC per option"
   max_option_fee: "12.5% of the option's price"
   liquidation_extra_fee: 0.30%
-margin_trading: "Yes"
+margin_trading:
+  details: "Whenever the maintenance margin of a user is higher than 100%, the liquidation process will start. During liquidation, open futures and open options positions can be closed and/or delta hedging can take place via perpetuals. It is within the discretion of Deribit risk management how to handle the user’s portfolio in an attempt to reduce the risk of bankruptcy. The liquidation process will look at the risk matrix to find which instrument is contributing the most to the margin and liquidate that instrument. If the attempted liquidation order does not trade (within certain safety parameters to not deviate too far from fair prices), then the algorithm will move to the next highest contributing instrument in the risk matrix. If attempts on the relevant instruments do not execute, then we will attempt to reduce the risk by delta hedging on the Perpetual (if this also reduces the maintenance margin). Note that we will always attempt to reduce instrument positions but the backup hedging using the Perpetual could result in opening or increasing an existing position there."
 financial_reserves: $3,452,253,101.26
 token_allocation:
   BTC: 68.04%
