updated cronjob time

--- a/.github/workflows/zan_scheduler_1.yml
+++ b/.github/workflows/zan_scheduler_1.yml
@@ -1,10 +1,10 @@
 ---
-name: Run PyInsightic Zan Scheduler
+name: Run PyInsightic Zan Scheduler Part 1
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 22 */3 * *'
+    - cron: '0 19 */3 * *'
 
 jobs:
   yaml-format-check:
