--- a/.github/workflows/zan_scheduler_2.yml
+++ b/.github/workflows/zan_scheduler_2.yml
@@ -1,10 +1,10 @@
 ---
-name: Run PyInsightic Scheduler Once Every 2 Days
+name: Run PyInsightic Zan Scheduler Part 2
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 17 */2 * *'
+    - cron: '0 23 */3 * *'
 
 jobs:
   yaml-format-check:
@@ -43,19 +43,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Install Chromium and ChromeDriver
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y chromium-browser
-          sudo apt-get install -y chromium-chromedriver
-
-      - name: Check Chromium installation
-        run: |
-          which chromium-browser
-          dpkg -L chromium-browser
-
-      - name: Install Poppler
-        run: sudo apt-get install -y poppler-utils
 
       - name: Install Tesseract OCR
         run: |
@@ -69,13 +56,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_SECRET }}
 
-      - name: Install NLTK Data
-        run: |
-          python -m nltk.downloader punkt stopwords vader_lexicon
-
       - name: Run pyinsightic analysis
         run: |
-          python scheduler_bi_daily.py 2>&1 | tee analysis.log
+          cd stablecoin && (python zan_analysis.py 2>&1 | tee analysis.log)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -85,7 +68,6 @@ jobs:
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
           ZAN_API_TOKEN: ${{ secrets.ZAN_API_TOKEN }}
           ZAN_CHAIN_RPC_TOKEN: ${{ secrets.ZAN_CHAIN_RPC_TOKEN }}
-          OKLINK_API_TOKEN: ${{ secrets.OKLINK_API_TOKEN }}
 
       - name: Upload logs as artifact
         uses: actions/upload-artifact@v3
