updated run time for schedulers to sgt

--- a/.github/workflows/pyinsightic_scheduler_bi_daily.yml
+++ b/.github/workflows/pyinsightic_scheduler_bi_daily.yml
@@ -1,10 +1,13 @@
 ---
 name: Run PyInsightic Scheduler Once Every 2 Days
 
+env:
+  TZ: "Asia/Singapore"
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 17 */2 * *'
+    - cron: '0 1 */2 * *'
 
 jobs:
   yaml-format-check:
