add USDL attestation report analysis result

--- a/stablecoin/usdl/data.yml
+++ b/stablecoin/usdl/data.yml
@@ -12,8 +12,8 @@ links:
   linkedin: https://www.linkedin.com/company/lift-dollar-usdl/
 whitepaper: https://whitepaper.liftdollar.com/index.html
 security_report: https://github.com/paxosglobal/ybs-contract/blob/master/audits/REP-final-20240301T145234Z.pdf
-attestation_report:
-audit_firm_name: Certik
+attestation_report: https://liftdollar.com/wp-content/uploads/2024/06/USDL-Examination-Report-Paxos-Signed-Report-for-31-May-2023.pdf
+audit_firm_name: Crowe Mak LLP
 stablecoin_name: USDL
 overview: |
   USDL gives eligible users direct access to both US dollars and yield from cash equivalent assets from outside the US. 1 USDL is always worth 1 US dollar.
