--- a/stablecoin/usdl/data.yml
+++ b/stablecoin/usdl/data.yml
@@ -70,21 +70,19 @@ social_media:
 
 financial_analysis:
   financial_audit:
-    auditors: Deloitte & Touche LLP
+    auditors: Crowe Mak LLP
     score: N.A.
     analysis: |
-      Management's assertion that the Fair Value of Assets Held in USDC Reserve is equal to or greater than USDC in
-      Circulation as of the Report Dates in accordance with the criteria defined in the accompanying USDC Reserve
-      Report is fairly stated, in all material respects.
+      The Independent Practitioner's Report, addressed to the Board of Directors of Paxos Issuance MENA Ltd., was conducted in accordance with the requirements of the Financial Services Regulatory Authority (FSRA) of Abu Dhabi Global Market (ADGM). <br />
+      The report provides a reasonable assurance engagement over the management's accompanying notes of the Redemption Assets Report, focusing on risks and uncertainties related to cryptocurrencies and background information provided by management. <br />
+      The practitioners did not express an opinion or conclusion on these notes, nor did they examine the company's compliance with laws, regulations, or contractual obligations. <br />
+      The report concludes that the assertions used by the company for preparing the Redemption Assets Report are fairly stated as of the specified report dates and times. <br />
+      The examination was conducted following the International Standard on Assurance Engagements 3000 (Revised).
     reserve_holdings_percentage:
-      - title: U.S. Treasury Repurchase Agreements
-        value: 0.60
-      - title: U.S. TREASURY SECURITIES
-        value: 0.29
-      - title: Cash held at regulated financial institutions
-        value: 0.07
-      - title: Cash held in Circle Reserve Fund
-        value: 0.04
+      - title: Total U.S. Treasury Bills (Fair Value)
+        value: 0.999115
+      - title: Total U.S. Dollars Held (Fair Value)
+        value: 0.000885
   market_capitalization_and_liquidity:
   investments:
   list_of_investors:
