--- a/.github/workflows/pyinsightic.yml
+++ b/.github/workflows/pyinsightic.yml
@@ -74,6 +74,7 @@ jobs:
           python main.py 2>&1 | tee analysis.log
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          ADMIN_API_KEY: ${{ secrets.ADMIN_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
