--- a/.github/workflows/zan_scheduler_2.yml
+++ b/.github/workflows/zan_scheduler_2.yml
@@ -61,6 +61,7 @@ jobs:
           cd stablecoin && (python zan_analysis.py 2 2>&1 | tee analysis.log)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          ADMIN_API_KEY: ${{ secrets.ADMIN_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
